--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+    <a href="./pages/about.html">About</a>
+    <!-- <img src="./images/dog.jpg" alt="dog image" height = "310" width="310"> -->
+    <h4>Fruits</h4> 
+    <ol>
+        <li>Apples</li>
+        <li>Oranges</li>
+        <li>Grapes</li>
+     </ol>
 </body>
 </html>
